--- a/src/example/tests/CMakeLists.txt
+++ b/src/example/tests/CMakeLists.txt
@@ -7,13 +7,27 @@ include_directories(${PROJECT_BINARY_DIR}/${CMAKE_PROJECT_NAME}_autogen/include)
 # Include project source.
 include_directories(${PROJECT_SOURCE_DIR}/src/example)
 
+file(
+    GLOB
+    UTILITY_BOILERPLATE_QT5_SOURCES
+    ../../utility_boilerplate_qt5/*.hpp
+    ../../utility_boilerplate_qt5/*.cpp
+    ../../utility_boilerplate_qt5/settings/*.hpp
+    ../../utility_boilerplate_qt5/settings/*.cpp
+    ../../utility_boilerplate_qt5/settings/items/*.hpp
+    ../../utility_boilerplate_qt5/settings/items/*.cpp
+    ../../utility_boilerplate_qt5/settings/items/abstract/*.hpp
+)
+
+message(${UTILITY_BOILERPLATE_QT5_SOURCES})
+
 # Find tests sources.
 file(GLOB TEST_SOURCES *.cpp *.hpp)
 # Create tests project and link with libraries.
-add_executable(tests ${TEST_SOURCES})
+add_executable(tests ${TEST_SOURCES} ${UTILITY_BOILERPLATE_QT5_SOURCES} ${SOURCES})
 
 target_link_libraries(tests utility_boilerplate_qt5)
-target_link_libraries(tests gtest gtest_main gcov)
+target_link_libraries(tests gtest_main gtest gcov)
 
 # Make it discoverable for CTest.
-gtest_discover_tests(tests)
+add_test(NAME app_tests COMMAND tests --platform offscreen)
