--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,4 +1,4 @@
-name: Ubuntu tests
+name: Windows build
 
 on:
   push:
@@ -8,14 +8,9 @@ on:
     branches:
       - main
 
-env:
-  QT_DEBUG_PLUGINS: 1
-  CTEST_OUTPUT_ON_FAILURE: 1
-  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout repository and submodules
@@ -35,27 +30,15 @@ jobs:
         with:
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
           version: '5.15.2'
+          host: 'windows'
+          arch: 'win64_mingw81'
 
       - name: Install project dependencies
         run: |
 
       - name: Configure
         run: |
-          cmake -S. -Bbuild/tests -DCMAKE_BUILD_TYPE=Debug -DCODE_COVERAGE=1
+          cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -G"MinGW Makefiles"
 
       - name: Build
-        run: cmake --build build/tests -j4
-
-      - name: Test
-        run: |
-          cd build/tests
-          ctest -V
-          ctest -V -T coverage
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./build/tests/Testing/CoverageInfo
-          fail_ci_if_error: true
-          verbose: true
+        run: cmake --build build -j4
