Redesign templates methods that add actions to menus and toolbars to be polymorph

--- a/.github/workflows/ubuntu-tests.yml
+++ b/.github/workflows/ubuntu-tests.yml
@@ -49,8 +49,8 @@ jobs:
       - name: Test
         run: |
           cd build/tests
-          ctest -V
-          ctest -V -T coverage
+          ctest
+          ctest -T coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
